--- a/elements.html
+++ b/elements.html
@@ -73,7 +73,21 @@ var c = a + b;</pre>
 <a href="http://google.com" title="Google" target="_self">Google</a><br> 
 <a href="http://google.com" title="Google">Google</a><br>
 <a href="http://google.com" title="Google" target="_top">Google</a><br>
-<a href="http://google.com" title="Google" target="_parent">Google</a>
+<a href="http://google.com" title="Google" target="_parent">Google</a><br>
+
+<!--링크에 아이디 값을 넣어서, 해당하는 부분으로 이동-->
+<a href="#section-1" title="Section 1">Section 1</a><br>
+
+<!--링크에 파일 경로를 넣어서, 해당하는 페이지로 이동-->
+<a href="/index.html" title="Index">Index</a><br>
+
+<!--링크에 파일 경로를 넣어서, 해당하는 페이지로 이동-->
+<a href="/" title="Home">Home</a><br>
+
+<div id="section-1">
+  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+</div>
+
 
 </body>
 </html>
