--- a/index.html
+++ b/index.html
@@ -1,78 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form</title>
-  </head>
-  <body>
-    <form action="/login">
-      <fieldset>
-        <legend>로그인 양식</legend>
-          <div>
-            <label for="login-id">아이디</label>
-            <input id="login-id" type="text" name="login_id" required placeholder="아이디를 입력해주세요." />
-          </div>
-          <div>
-            <label for="login-pw">비밀번호</label>
-            <!-- <input id="login-pw" type="password" name="login_pw" readonly value="123" placeholder="비밀번호를 입력해주세요." /> -->
-            <input id="login-pw" type="password" name="login_pw" required placeholder="비밀번호를 입력해주세요." />
-          </div>
-          <div>
-            <input id="login-auto" type="checkbox" name="login_auto" value="1" />
-            <label for="login-auto">자동 로그인</label>
-          </div>
-      </fieldset>
-      <fieldset>
-        <legend>추가 정보</legend>
-          <input type="range" min="0" max="200" step="50" />
-          <input type="datetime" />
-          <input type="number" min="0" max="20" value="10" step="2" />
-          <input type="tel" /> <!--모바일에서 키패드가 넘버패드로 바뀜-->
-          <input type="submit" value="로그인" />
-          <button type="submit">로그인</button>
-
-          <div> <!--name이 같은 속성이면 하나만 체크됨-->
-            <span>좋아하는 과일</span>
-            <div>
-              <div>
-                <input id="selection-1" type="radio" name="selection" value="사과" checked />
-                <label for="selection-1">사과</label>
-              </div>
-              <div>
-                <input id="selection-2" type="radio" name="selection" value="오렌지" />
-                <label for="selection-2">오렌지</label>
-              </div>
-              <div>
-                <input id="selection-3" type="radio" name="selection" value="딸기" />
-                <label for="selection-3">딸기</label>
-              </div>
-              <div>
-                <input id="selection-4" type="radio" name="selection" value="망고" />    
-                <label for="selection-4">망고</label>
-              </div>
-            </div>
-          </div>
-
-          <label for="content">내용</label><br />
-          <textarea id="content" cols="30" rows="4" placeholder="내용을 입력해주세요.">
-    이름:
-    생일:
-          </textarea><br />
-
-          <select name="" id="">
-            <option selected disabled>선택해주세요.</option>
-            <option value="0">사과</option>
-            <option value="1">오렌지</option>
-            <option value="2" disabled>딸기</option>
-            <option value="3">망고</option>
-          </select><br />
-
-          <label for="upload-file">파일 선택</label>
-          <input id="upload-file" type="file" placeholder="이미지 파일을 선택해주세요." accept="image/*" multiple />
-          <input type="file" placeholder="이미지 파일을 선택해주세요." accept="image/png" />
-    </fieldset>
-    </form>
-  </body>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSS</title>
+  <style>
+    /* CSS */
+    h1 {
+      padding: 10px 20px;
+      background-color: black;
+      border-radius: 10px;
+      color: white;
+    }
+    p {
+      color: skyblue;
+    }
+    p.red {
+      color: red;
+    }
+    p#orange {
+      background-color: orange;
+      color: white;
+    }
+    p#gray.red {
+      color: gray /*!important;*/
+      /* color: grey; */
+    }
+    p#gray.orange {
+      color: orange;
+    }
+    p#gray.red.orange {
+      color: black;
+    }
+    /* 전체 스타일 지정 - 요샌 잘 안씀!
+    *{
+      margin: 0;
+      padding: 0;
+    }
+    */
+  </style>
+</head>
+<body>
+  <h1>CSS - Cascading Style sheets</h1>
+  <p>
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+  </p>
+  <p class="red">
+    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+  </p>
+  <p id="orange">
+    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+  </p>
+  <p id="gray" class="red orange">
+    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+  </p>
+</body>
 </html>
