--- a/index.html
+++ b/index.html
@@ -9,27 +9,30 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="https://use.typekit.net/zzj4qmz.css" />
-
-  <link rel="stylesheet" href="./assets/css/style.css" />
-
-  <link rel="stylesheet" href="/vendor/fontawesome/css/all.min.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 <body>
-  <div class="box box-1">
-    모든 사람은 의견의 자유와 표현의 자유에 대한 권리를 가진다. 이러한 권리는 간섭없이 의견을 가질 자유와 국경에 관계없이 어떠한 매체를 통해서도 정보와 사상을 추구하고, 얻으며, 전달하는 자유를 포함한다. 모든 사람은 사회의 일원으로서 사회보장을 받을 권리를 가지며, 국가적 노력과 국제적 협력을 통하여, 그리고 각 국가의 조직과 자원에 따라서 자신의 존엄과 인격의 자유로운 발전에 불가결한 경제적, 사회적 및 문화적 권리들을 실현할 권리를 가진다. 모든 사람은 노동시간의 합리적 제한과 정기적인 유급휴가를 포함하여 휴식과 여가의 권리를 가진다. 모든 사람은 이 선언에 규정된 권리와 자유가 완전히 실현될 수 있도록 사회적, 국제적 질서에 대한 권리를 가진다.
-  </div>
+ <h1>CSS</h1>
 
-  <div class="box box-2">
-    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-  </div>
+ <div class="box">
+  <a href="https://google.com" 
+  title="google" target="_blank">Google</a><a href="https://naver.com" 
+  title="naver" target="_blank" class="link_naver">Naver</a><a href="https://www.apple.com" 
+  title="apple" target="_blank">Apple</a>
+ </div>
 
-  <div class="box box-3">
-    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-  </div>
+ <div class="menu_container">
+  <ul class="menu">
+    <li><a href="https://google.com" 
+      title="google" target="_blank">Google</a></li><li><a href="https://naver.com" 
+    title="naver" target="_blank" class="link_naver">Naver</a></li><li><a href="https://www.apple.com" 
+    title="apple" target="_blank">Apple</a></li>
+   </ul>
+ </div>
 
-  <i class="fa-solid fa-user"></i>
-  <script src="/vendor/fontawesome/js/all.min.js" type="text/javascript"></script>
+ <div class="box-2">
+  box
+ </div>
+
 </body>
 </html>
