--- a/index.html
+++ b/index.html
@@ -12,27 +12,81 @@
   <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 <body>
- <h1>CSS</h1>
+  <header class="header">
+    <h1>CSS</h1>
+  </header>
+  <main class="main">
+    <section class="section section-1">
+      <h2>Section 1</h2>
+      <div class="box">
+        <span>Box</span>
+      </div>
+    </section>
+    <section class="section section-2">
+      <h2>Section 2</h2>
+      <div class="box">
+        <span>Box</span>
+      </div>
+    </section>
+    <section class="section section-3">
+      <h2>Section 3</h2>
+        <ul>
+          <li>
+            <span>item 1</span>
+            <ul>
+              <li>sub item 1</li>
+              <li>sub item 2</li>
+            </ul>
+          </li>
+          <li>
+            <span>item 2</span>
+            <ul>
+              <li>sub item 1</li>
+              <li>sub item 2</li>
+            </ul>
+          </li>
+          <li>
+            <span>item 3</span>
+            <ul>
+              <li>sub item 1</li>
+              <li>sub item 2</li>
+            </ul>
+          </li>
+          <li>
+            <span>item 4</span>
+            <ul>
+              <li>sub item 1</li>
+              <li>sub item 2</li>
+            </ul>
+          </li>
+          <li>
+            <span>item 5</span>
+            <ul>
+              <li>sub item 1</li>
+              <li>sub item 2</li>
+            </ul>
+          </li>
+          <li>
+            <span>item 6</span>
+            <ul>
+              <li>sub item 1</li>
+              <li>sub item 2</li>
+            </ul>
+          </li>
+        </ul>
+        <p>hello</p>
+        <p class="hello">hello</p>
+        <div>world</div>
+        <p>hello</p>
+        <div>world</div>
+        <p>hello</p>
 
- <div class="box">
-  <a href="https://google.com" 
-  title="google" target="_blank">Google</a><a href="https://naver.com" 
-  title="naver" target="_blank" class="link_naver">Naver</a><a href="https://www.apple.com" 
-  title="apple" target="_blank">Apple</a>
- </div>
+        <input type="text" class="input" value="안녕하세요.">
+        <input type="text" class="input" readonly value="안녕하세요.">
+        <input type="text" class="input" disabled value="안녕하세요.">
 
- <div class="menu_container">
-  <ul class="menu">
-    <li><a href="https://google.com" 
-      title="google" target="_blank">Google</a></li><li><a href="https://naver.com" 
-    title="naver" target="_blank" class="link_naver">Naver</a></li><li><a href="https://www.apple.com" 
-    title="apple" target="_blank">Apple</a></li>
-   </ul>
- </div>
-
- <div class="box-2">
-  box
- </div>
-
+        <input class="checkbox" type="checkbox"><span>체크해주세요.</span>
+    </section>
+  </main>
 </body>
 </html>
