--- a/index.html
+++ b/index.html
@@ -25,15 +25,42 @@
               </div>
             </div>
     </header>
+
+    <div id="searchbar">
+      <div class="content-area">
+        <img src="assets/img/01-01_special_fixed.jpg" alt="search" width="1130">
+      </div>
+    </div>
+
     <div id="contents">
         <main id="main" role="main">
           <div class="veta">
             <img src="/assets/img/02-01-01_veta.jpg" alt="veta" width="750", height="135" />
           </div>
+          <div class="newsstand">
+            <img src="assets/img/02-01-02_newsstand.jpg" alt="uewsstand" width="750">
+          </div>
+          <div class="themecast">
+            <img src="assets/img/02-01-03_themecast.jpg" alt="themecast" width="750">
+            <p class="paddle paddle-prev">&nbsp;</p>
+            <p class="paddle paddle-next">&nbsp;</p>
+          </div>
         </main>
         <aside id="aside">
           <div class="account">
             <img src="assets/img/02-02-01_account.jpg" alt="account" width="350" height="135" />
+          </div>
+
+          <div class="timesquare">
+            <img src="assets/img/02-02-02_timesquare.jpg" alt="timesquare" width="350">
+          </div>
+
+          <div class="veta_brandin">
+            <img src="assets/img/02-02-03_veta_branding.jpg" alt="veta_brandin" width="350">
+          </div>
+
+          <div class="shop">
+            <img src="assets/img/02-02-04_shop.jpg" alt="shop" width="350">
           </div>
         </aside>
     </div>
