--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="group">
               <div class="content-area">
                 <nav class="navigation" role="navigation">
-                  <img src="/assets/img/01-02-01_nav.jpg" alt="navigation" width="860", height="52" />
+                  <img src="/assets/img/01-02-01_nav.jpg" alt="navigation" width="860" height="52" />
                 </nav>
                 <div class="weather">
                   <img src="assets/img/01-02-02_weather.jpg" alt="weather" width="270" height="52">
