--- a/index.html
+++ b/index.html
@@ -4,70 +4,40 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>네이버</title>
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <title>CSS</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-    <header id="header">
-        <div class="special">
-          <div class="content-area">
-            <img src="/assets/img/01-01_special.jpg" alt="Special" width="1130" height="160" />
-          </div>
-        </div>
-            <div class="group">
-              <div class="content-area">
-                <nav class="navigation" role="navigation">
-                  <img src="/assets/img/01-02-01_nav.jpg" alt="navigation" width="860" height="52" />
-                </nav>
-                <div class="weather">
-                  <img src="assets/img/01-02-02_weather.jpg" alt="weather" width="270" height="52">
-                </div>
-              </div>
-            </div>
-    </header>
+<div class="contents">
 
-    <div id="searchbar">
-      <div class="content-area">
-        <img src="assets/img/01-01_special_fixed.jpg" alt="search" width="1130">
-      </div>
+  <div class="box-wrap">
+    <div class="box box-1">
+      box
     </div>
+  </div>
 
-    <div id="contents">
-        <main id="main" role="main">
-          <div class="veta">
-            <img src="/assets/img/02-01-01_veta.jpg" alt="veta" width="750", height="135" />
-          </div>
-          <div class="newsstand">
-            <img src="assets/img/02-01-02_newsstand.jpg" alt="uewsstand" width="750">
-          </div>
-          <div class="themecast">
-            <img src="assets/img/02-01-03_themecast.jpg" alt="themecast" width="750">
-            <p class="paddle paddle-prev">&nbsp;</p>
-            <p class="paddle paddle-next">&nbsp;</p>
-          </div>
-        </main>
-        <aside id="aside">
-          <div class="account">
-            <img src="assets/img/02-02-01_account.jpg" alt="account" width="350" height="135" />
-          </div>
+  <div class="box">
+    box
+  </div>
 
-          <div class="timesquare">
-            <img src="assets/img/02-02-02_timesquare.jpg" alt="timesquare" width="350">
-          </div>
+  <div class="close">
+    <span>&nbsp;</span>
+    <span>&nbsp;</span>
+  </div>
 
-          <div class="veta_brandin">
-            <img src="assets/img/02-02-03_veta_branding.jpg" alt="veta_brandin" width="350">
-          </div>
+  <div class="close-2">
+    <span>&nbsp;</span>
+    <span>&nbsp;</span>
+  </div>
 
-          <div class="shop">
-            <img src="assets/img/02-02-04_shop.jpg" alt="shop" width="350">
-          </div>
-        </aside>
-    </div>
-    <footer id="footer" role="contentinfo">
-        <div class="gf-content">
-            <img src="assets/img/03_footer.jpg" alt="footer" width="1130", height="420">
-        </div>
-    </footer>
+  <div class="close-3">
+    <span>&nbsp;</span>
+    <span>&nbsp;</span>
+    과제 1. 스팬 대신에 가상요소 넣어서 (after, before) close-2랑 똑같이 만들어보기
+  </div>
+
+  <div class="close-3" >Close</div>
+  과제 2. close 글자 없애기
+</div>
 </body>
 </html>
