--- a/index.html
+++ b/index.html
@@ -8,30 +8,24 @@
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-<div class="contents">
 
-  <div class="box-wrap">
-    <div class="box box-1">
-      box
-    </div>
+
+  <div class="container">
+
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item item-6">6</div>
+
   </div>
 
-  <div class="box">
-    box
+  <div class="container-2">
+    <div class="item-1">left</div>
+    <div class="item-2">center</div>
+    <div class="item-3">right</div>
   </div>
 
-  <div class="close">
-    <span>&nbsp;</span>
-    <span>&nbsp;</span>
-  </div>
-
-  <div class="close-2">
-    <span>&nbsp;</span>
-    <span>&nbsp;</span>
-  </div>
-
-  <div class="close-3" >Close</div>
-
-</div>
 </body>
 </html>
