--- a/index.html
+++ b/index.html
@@ -8,24 +8,133 @@
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
+  <h1 class="visivility_hidden">Flexbox Layout</h1>
 
-
-  <div class="container">
-
-    <div class="item">1</div>
-    <div class="item">2</div>
-    <div class="item">3</div>
-    <div class="item">4</div>
-    <div class="item">5</div>
-    <div class="item item-6">6</div>
-
-  </div>
-
-  <div class="container-2">
-    <div class="item-1">left</div>
-    <div class="item-2">center</div>
-    <div class="item-3">right</div>
-  </div>
-
+  <!-- main#main>div.grid>div.grid_item*20>figure>img -->
+  <main id="main">
+    <div class="grid">
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/1.jpg" alt="caption 1">
+          <figcaption>caption 1</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/2.jpg" alt="caption 2">
+          <figcaption>caption 2</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/3.jpg" alt="caption 3">
+          <figcaption>caption 3</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item item-4">
+        <figure>
+          <img src="assets/css/img/4.jpg" alt="caption 4">
+          <figcaption>caption 4</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/5.jpg" alt="caption 5">
+          <figcaption>caption 5</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/6.jpg" alt="caption 6">
+          <figcaption>caption 6</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/7.jpg" alt="caption 7">
+          <figcaption>caption 7</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/8.jpg" alt="caption 8">
+          <figcaption>caption 8</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/9.jpg" alt="caption 9">
+          <figcaption>caption 9</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/10.jpg" alt="caption 10">
+          <figcaption>caption 10</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/11.jpg" alt="caption 11">
+          <figcaption>caption 11</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/12.jpg" alt="caption 12">
+          <figcaption>caption 12</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/13.jpg" alt="caption 13">
+          <figcaption>caption 13</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/14.jpg" alt="caption 14">
+          <figcaption>caption 14</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/15.jpg" alt="caption 15">
+          <figcaption>caption 15</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/16.jpg" alt="caption 16">
+          <figcaption>caption 16</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/17.jpg" alt="caption 17">
+          <figcaption>caption 17</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/18.jpg" alt="caption 18">
+          <figcaption>caption 18</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/19.jpg" alt="caption 19">
+          <figcaption>caption 19</figcaption>
+        </figure>
+      </div>
+      <div class="grid_item">
+        <figure>
+          <img src="assets/css/img/20.jpg" alt="caption 20">
+          <figcaption>caption 20</figcaption>
+        </figure>
+      </div>
+    </div>
+  </main>
+  <div class="indicator">Size: </div>
 </body>
 </html>
