--- a/index.html
+++ b/index.html
@@ -8,120 +8,160 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <header id="header">
-      <div class="group-1">
-        <div class="content-area">
-          <nav class="navigation" role="navigation">
-            <img src="/assets/img/01_header_01_navigation.jpg" alt="navigation" width="1256" height="80" />
-          </nav>
-        </div>
+    <aside id="banner">
+      <div class="banner_content">
+        <img src="/assets/img/00_banner.jpg" alt="첫 구매라면 누구나 최대 2만원 할인받기" width="1136" />
       </div>
-      <div class="group-2">
-        <div class="content-area">
-          <nav class="submenu" role="submenu">
-            <img src="/assets/img/01_header_02_submenu.jpg" alt="submenu" width="1256" height="50" />
-          </nav>
+    </aside>
+
+    <header id="header">
+      <nav id="navigation" role="navigation">
+        <div class="header_content">
+          <img src="/assets/img/01_header_01_navigation.jpg" alt="navigation" width="1136" />
+        </div>
+
+      </nav>
+      <div class="submenu" role="submenu">
+        <div class="header_content">
+          <img src="/assets/img/01_header_02_submenu.jpg" alt="submenu" width="1136" />
         </div>
       </div>
     </header>
 
-    <div class="banner">
-      <div class="content-area">
-        <img src="/assets/img/00_banner.jpg" alt="submenu" width="1156" height="50" />
-      </div>
-    </div>
-
-    <div class="contents">
       <main id="main" role="main">
-        <div class="overview">
-          <div class="project">
-            <img src="/assets/img/02_main_01_overview_01_projects.jpg" alt="project" width="847" height="508" />
-          </div>
-          <div class="events">
-            <img src="/assets/img/02_main_01_overview_02_events.jpg" alt="events" width="269" height="508" />
-          </div>
-        </div>
-        <div class="categories">
-          <img src="/assets/img/02_main_02_categories.jpg" alt="categories" width="1256" height="107.25" />
-        </div>
-        <div class="articles1">
-          <div class="article1">
-            <img src="/assets/img/02_main_03_articles1_01_article1.jpg" alt="article1" width="1156" height="305.33" />
-          </div>
-          <div class="article2">
-            <img src="/assets/img/02_main_03_articles1_02_article2.jpg" alt="article2" width="1156" height="305.33" />
-          </div>
-          <div class="article3">
-            <img src="/assets/img/02_main_03_articles1_03_article3.jpg" alt="article3" width="1156" height="305.33" />
-          </div>
-          <div class="article4">
-            <img src="/assets/img/02_main_03_articles1_04_article4.jpg" alt="article4" width="1156" height="305.33" />
-          </div>
-        </div>
-        <div class="caregory-finder">
-          <img src="/assets/img/02_main_04_category_finder.jpg" alt="caregory-finder" width="1156" height="166" />
-        </div>
-        <div class="today-deal">
-          <img src="/assets/img/02_main_05_today_deal.jpg" alt="today-deal" width="1156" height="468" />
-        </div>
-        <div class="article2">
-          <div class="article1">
-            <img src="/assets/img/02_main_06_articles2_01_article1.jpg" alt="article1" width="1156" height="305.33" />
-          </div>
-          <div class="article2">
-            <img src="/assets/img/02_main_06_articles2_02_article2.jpg" alt="article2" width="1156" height="305.33" />
-          </div>
-        </div>
-        <div class="top10">
-          <img src="/assets/img/02_main_07_top10.jpg" alt="top10" width="1156" height="320.22" />
-        </div>
-        <div class="reviews">
-          <img src="/assets/img/02_main_08_reviews.jpg" alt="reviews" width="1156" height="419.56" />
-        </div>
-        <div class="events">
-          <img src="/assets/img/02_main_09_events.jpg" alt="events" width="1156" height="305.33" />
-        </div>
-        <div class="grid">
-          <div class="grid-item">
-            <img src="/assets/img/02_main_10_best_01_head_01_title.jpg" alt="grid-item1" width="54.3" height="28" />
-          </div>
-          <div class="grid-item">
-            <img src="/assets/img/02_main_10_best_01_head_02_util.jpg" alt="grid-item2" width="44.16" height="20" />
-          </div>
-          <div class="grid-item">
-            <img src="/assets/img/02_main_10_best_02_menu.jpg" alt="grid-item3" width="1136" height="32" />
-          </div>
-          <div class="grid-item">
-            <img
-              src="/assets/img/02_main_10_best_03_list_01_item1.jpg"
-              alt="grid-item4"
-              width="365.33"
-              height="498.34"
-            />
-          </div>
-          <div class="grid-item">
-            <img
-              src="/assets/img/02_main_10_best_03_list_02_item2.jpg"
-              alt="grid-item5"
-              width="365.33"
-              height="498.34"
-            />
-          </div>
-          <div class="grid-item">
-            <img
-              src="/assets/img/02_main_10_best_03_list_03_item3.jpg"
-              alt="grid-item6"
-              width="365.33"
-              height="498.34"
-            />
-          </div>
+        <div class="main_content">
+          <section id="overview">
+            <div class="project">
+              <img src="/assets/img/02_main_01_overview_01_projects.jpg" alt="project" width="847" />
+            </div>
+            <div class="events">
+              <img src="/assets/img/02_main_01_overview_02_events.jpg" alt="events" width="269" />
+            </div>
+          </section>
+  
+          <section id="categories">
+            <img src="/assets/img/02_main_02_categories.jpg" alt="categories" width="1136" />
+          </section>
+  
+          <section id="articles_first">
+            <div class="article">
+              <img src="/assets/img/02_main_03_articles1_01_article1.jpg" alt="article1" width="1136" />
+            </div>
+            <div class="article">
+              <img src="/assets/img/02_main_03_articles1_02_article2.jpg" alt="article2" width="1136" />
+            </div>
+            <div class="article">
+              <img src="/assets/img/02_main_03_articles1_03_article3.jpg" alt="article3" width="1136" />
+            </div>
+            <div class="article">
+              <img src="/assets/img/02_main_03_articles1_04_article4.jpg" alt="article4" width="1136" />
+            </div>
+          </section>
+  
+          <section id="category_finder">
+            <img src="/assets/img/02_main_04_category_finder.jpg" alt="caregory-finder" width="1136" />
+          </section>
+  
+          <section id="today_deal">
+            <img src="/assets/img/02_main_05_today_deal.jpg" alt="today-deal" width="1136" />
+          </section>
+  
+          <section id="article_second">
+            <div class="article">
+              <img src="/assets/img/02_main_06_articles2_01_article1.jpg" alt="article1" width="1136" />
+            </div>
+            <div class="article">
+              <img src="/assets/img/02_main_06_articles2_02_article2.jpg" alt="article2" width="1136" />
+            </div>
+          </section>
+  
+          <section id="top10">
+            <img src="/assets/img/02_main_07_top10.jpg" alt="top10" width="1136" />
+          </section>
+  
+          <section id="reviews">
+            <img src="/assets/img/02_main_08_reviews.jpg" alt="reviews" width="1136" />
+          </section>
+  
+          <section class="events">
+            <img src="/assets/img/02_main_09_events.jpg" alt="events" width="1136" />
+          </section>
+  
+          <section id="best">
+
+            <div class="head">
+              <div class="title">
+                <img src="/assets/img/02_main_10_best_01_head_01_title.jpg" alt="베스트" height="29" />
+              </div>
+              <div class="util">
+                <img src="/assets/img/02_main_10_best_01_head_02_util.jpg" alt="더보기" height="20" />
+              </div>
+            </div>
+
+            <div class="menu">
+              <img src="/assets/img/02_main_10_best_02_menu.jpg" alt="menu" width="1136" />
+            </div>
+<!--             
+            <div class="list">
+              <div class="item">
+                <img
+                  src="/assets/img/02_main_10_best_03_list_01_item1.jpg"
+                  alt="item 1"
+                  width="365"
+                />
+              </div>
+              <div class="item">
+                <img
+                  src="/assets/img/02_main_10_best_03_list_02_item2.jpg"
+                  alt="item 2"
+                  width="365"
+                />
+              </div>
+              <div class="item">
+                <img
+                  src="/assets/img/02_main_10_best_03_list_03_item3.jpg"
+                  alt="item 3"
+                  width="365"
+                />
+              </div>
+            </div> -->
+                
+            <div class="list">
+              <div class="list_wrap">
+                <div class="item">
+                  <img
+                    src="/assets/img/02_main_10_best_03_list_01_item1.jpg"
+                    alt="item 1"
+                    width="365"
+                  />
+                </div>
+                <div class="item">
+                  <img
+                    src="/assets/img/02_main_10_best_03_list_02_item2.jpg"
+                    alt="item 2"
+                    width="365"
+                  />
+                </div>
+                <div class="item">
+                  <img
+                    src="/assets/img/02_main_10_best_03_list_03_item3.jpg"
+                    alt="item 3"
+                    width="365"
+                  />
+                </div>
+              </div>
+
+            </div>
+          </section>
         </div>
       </main>
-    </div>
     <footer id="footer" role="contentinfo">
-      <div class="gf-content">
-        <img src="/assets/img/03_footer.jpg" alt="footer" width="1256" height="220" />
+      <div class="footer-content">
+        <img src="/assets/img/03_footer.jpg" alt="footer" width="1136" />
       </div>
     </footer>
   </body>
 </html>
+
+
+숙제 - 배너에 X, 메인 로고, 슬라이드 화살표 달아오기
