--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
           </li>
           <li class="gn_item gn_item_search">
             <button class="gn_search_button" type="button">
-              <span class="gn_search_image">
+              <span class="gn_search_image--d">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15px" height="44px" viewBox="0 0 15 44">
                   <path d="M14.298,27.202l-3.87-3.87c0.701-0.929,1.122-2.081,1.122-3.332c0-3.06-2.489-5.55-5.55-5.55c-3.06,0-5.55,2.49-5.55,5.55 c0,3.061,2.49,5.55,5.55,5.55c1.251,0,2.403-0.421,3.332-1.122l3.87,3.87c0.151,0.151,0.35,0.228,0.548,0.228 s0.396-0.076,0.548-0.228C14.601,27.995,14.601,27.505,14.298,27.202z M1.55,20c0-2.454,1.997-4.45,4.45-4.45 c2.454,0,4.45,1.997,4.45,4.45S8.454,24.45,6,24.45C3.546,24.45,1.55,22.454,1.55,20z"></path>
                   </svg>
               </span>
-              <span class="gn_search_image">
+              <span class="gn_search_image--m">
                 <svg height="48" viewBox="0 0 17 48" width="17" xmlns="http://www.w3.org/2000/svg">
                   <path d="m16.2294 29.9556-4.1755-4.0821a6.4711 6.4711 0 1 0 -1.2839 1.2625l4.2005 4.1066a.9.9 0 1 0 1.2588-1.287zm-14.5294-8.0017a5.2455 5.2455 0 1 1 5.2455 5.2527 5.2549 5.2549 0 0 1 -5.2455-5.2527z"></path>
                 </svg>
@@ -101,11 +101,11 @@
           </li>
           <li class="gn_item gn_item_bag">
             <button class="gn_bag_button" type="button">
-              <span class="gn_bag_image">
+              <span class="gn_bag_image--m">
                 <svg height="44" viewBox="0 0 14 44" width="14" xmlns="http://www.w3.org/2000/svg"><path d="m11.3535 16.0283h-1.0205a3.4229 3.4229 0 0 0 -3.333-2.9648 3.4229 3.4229 0 0 0 -3.333 2.9648h-1.02a2.1184 2.1184 0 0 0 -2.117 2.1162v7.7155a2.1186 2.1186 0 0 0 2.1162 2.1167h8.707a2.1186 2.1186 0 0 0 2.1168-2.1167v-7.7155a2.1184 2.1184 0 0 0 -2.1165-2.1162zm-4.3535-1.8652a2.3169 2.3169 0 0 1 2.2222 1.8652h-4.4444a2.3169 2.3169 0 0 1 2.2222-1.8652zm5.37 11.6969a1.0182 1.0182 0 0 1 -1.0166 1.0171h-8.7069a1.0182 1.0182 0 0 1 -1.0165-1.0171v-7.7155a1.0178 1.0178 0 0 1 1.0166-1.0166h8.707a1.0178 1.0178 0 0 1 1.0164 1.0166z"></path>
                 </svg>
               </span>
-              <span class="gn_bag_image">
+              <span class="gn_bag_image--d">
                 <svg height="48" viewBox="0 0 17 48" width="17" xmlns="http://www.w3.org/2000/svg"><path d="m13.4575 16.9268h-1.1353a3.8394 3.8394 0 0 0 -7.6444 0h-1.1353a2.6032 2.6032 0 0 0 -2.6 2.6v8.9232a2.6032 2.6032 0 0 0 2.6 2.6h9.915a2.6032 2.6032 0 0 0 2.6-2.6v-8.9231a2.6032 2.6032 0 0 0 -2.6-2.6001zm-4.9575-2.2768a2.658 2.658 0 0 1 2.6221 2.2764h-5.2442a2.658 2.658 0 0 1 2.6221-2.2764zm6.3574 13.8a1.4014 1.4014 0 0 1 -1.4 1.4h-9.9149a1.4014 1.4014 0 0 1 -1.4-1.4v-8.9231a1.4014 1.4014 0 0 1 1.4-1.4h9.915a1.4014 1.4014 0 0 1 1.4 1.4z"></path>
                 </svg>
               </span>
@@ -132,6 +132,63 @@
   </div>
   <main id="main" role="main">
 
+    <section id="hero_section" class="main_section">
+      <div id="hero--macbook_air_15" class="section_content" data-id="macbook_air_15">
+
+          <a href="/" class="unit_link" title="MacBook Air 15">&nbsp;</a>
+          <div class="unit_copy_wrapper">
+            <h2 class="headline">MacBook Air 15"</h2>
+            <h3 class="subhead">Impressively big. Impossibly thin.</h3>
+            <div class="cta_links">
+              <a href="/" class="cta_link" title="Learn more">
+                <span class="name">Learn more</span>
+                <span class="icon"></span>
+              </a>
+              <a href="/" class="cta_link">
+                <span class="name" title="Buy">Buy</span>
+                <span class="icon"></span>
+              </a>
+            </div>
+          </div>
+          <div class="unit_image_wrapper"></div>
+        
+      </div>
+    </section>
+    <section id="promotion_section" class="main_section">
+      <div id="hero--vision_pro_15" class="section_content" data-id="macbook_air_15">
+        <a href="/" class="unit_link" title="Vision Pro">&nbsp;</a>
+        <div class="unit_copy_wrapper">
+          <h2 class="headline vision_pro_logo">
+            <span class="visually_hidden">Vision Pro</span>
+          </h2>
+          <h3 class="subhead">Welcome to the era of spatial computing.</h3>
+          <p class="callout">Available early next year in the U.S.</p>
+          <div class="cta_links">
+            <a href="/" class="cta_link">
+              <span class="name" title="Learn more">Learn more</span>
+              <span class="icon"></span>
+            </a>
+      </div>
+    </section>
+    <section id="gallery_section" class="main_section">
+      <div id="hero--iPhone_14_pro" class="section_content" data-id="macbook_air_15">
+        <a href="/" class="unit_link" title="iPhone_14_Pro">&nbsp;</a>
+        <div class="unit_copy_wrapper">
+          <h2 class="headline">iPhone 14 Pro</h2>
+          <h3 class="subhead">Pro. Beyond.</h3>
+          <div class="cta_links">
+            <a href="/" class="cta_link" title="Learn more">
+              <span class="name">Learn more</span>
+              <span class="icon"></span>
+            </a>
+            <a href="/" class="cta_link">
+              <span class="name" title="Buy">Buy</span>
+              <span class="icon"></span>
+            </a>
+      </div>
+    </section>
+
+<!-- 
     <div class="layout">
       <div class="layout_area">
         <div class="layout_list">
@@ -164,7 +221,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </main>
   <footer id="global_footer" role="contentinfo"></footer>
