--- a/index.html
+++ b/index.html
@@ -302,6 +302,77 @@
             </div>
         </section>
         <section id="gallery_section" class="main_section">
+            <div class="gallery">
+                <div class="gallery_wrapper">
+                    <div class="gallery_container">
+                        <div class="gallery_item">
+                            <a href="" class="item_link" title="[title]">&nbsp;</a>
+                            <div class="item_copy_wrapper">
+                                <button type="button" class="play_button">Stream now
+                                </button>
+                                <p class="typography">[title]</p>
+                            </div>
+                            <div class="item_image_wrapper">
+                                <figure class="item_image">&nbsp;</figure>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <a href="" class="item_link" title="[title]">&nbsp;</a>
+                            <div class="item_copy_wrapper">
+                                <button type="button" class="play_button">Stream now
+                                </button>
+                                <p class="typography">[title]</p>
+                            </div>
+                            <div class="item_image_wrapper">
+                                <figure class="item_image">&nbsp;</figure>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <a href="" class="item_link" title="[title]">&nbsp;</a>
+                            <div class="item_copy_wrapper">
+                                <button type="button" class="play_button">Stream now
+                                </button>
+                                <p class="typography">[title]</p>
+                            </div>
+                            <div class="item_image_wrapper">
+                                <figure class="item_image">&nbsp;</figure>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <a href="" class="item_link" title="[title]">&nbsp;</a>
+                            <div class="item_copy_wrapper">
+                                <button type="button" class="play_button">Stream now
+                                </button>
+                                <p class="typography">[title]</p>
+                            </div>
+                            <div class="item_image_wrapper">
+                                <figure class="item_image">&nbsp;</figure>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <a href="" class="item_link" title="[title]">&nbsp;</a>
+                            <div class="item_copy_wrapper">
+                                <button type="button" class="play_button">Stream now
+                                </button>
+                                <p class="typography">[title]</p>
+                            </div>
+                            <div class="item_image_wrapper">
+                                <figure class="item_image">&nbsp;</figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <ul class="gallery_indicator">
+                    <li class="active"><button type="button" class="indicator_button">[title]</button></li>
+                    <li><button type="button" class="indicator_button">[title]</button></li>
+                    <li><button type="button" class="indicator_button">[title]</button></li>
+                    <li><button type="button" class="indicator_button">[title]</button></li>
+                    <li><button type="button" class="indicator_button">[title]</button></li>
+                </ul>
+            </div>
+
+
+
 
         </section>
         <!--
