--- a/index copy.html
+++ b/index copy.html
@@ -306,68 +306,58 @@
                 <div class="gallery_wrapper">
                     <div class="gallery_container">
                         <div class="gallery_item">
-                            <div class="gallery_item_wrapper">
-                                <a href="" class="item_link" title="[title]">&nbsp;</a>
-                                <div class="item_copy_wrapper">
-                                    <button type="button" class="play_button">Stream now
-                                    </button>
-                                    <p class="typography">[title]</p>
-                                </div>
-                                <div class="item_image_wrapper">
-                                    <figure class="item_image" style="background-image: url(/assets/img/gallery_1.jpg);" >&nbsp;</figure>
-                                </div>
+                            <a href="" class="item_link" title="[title]">&nbsp;</a>
+                            <div class="item_copy_wrapper">
+                                <button type="button" class="play_button">Stream now
+                                </button>
+                                <p class="typography">[title]</p>
+                            </div>
+                            <div class="item_image_wrapper">
+                                <figure class="item_image">&nbsp;</figure>
                             </div>
                         </div>
                         <div class="gallery_item">
-                            <div class="gallery_item_wrapper">
-                                <a href="" class="item_link" title="[title]">&nbsp;</a>
-                                <div class="item_copy_wrapper">
-                                    <button type="button" class="play_button">Stream now
-                                    </button>
-                                    <p class="typography">[title]</p>
-                                </div>
-                                <div class="item_image_wrapper">
-                                    <figure class="item_image" style="background-image: url(/assets/img/gallery_2.jpg);">&nbsp;</figure>
-                                </div>
+                            <a href="" class="item_link" title="[title]">&nbsp;</a>
+                            <div class="item_copy_wrapper">
+                                <button type="button" class="play_button">Stream now
+                                </button>
+                                <p class="typography">[title]</p>
+                            </div>
+                            <div class="item_image_wrapper">
+                                <figure class="item_image">&nbsp;</figure>
                             </div>
                         </div>
                         <div class="gallery_item">
-                            <div class="gallery_item_wrapper">
-                                <a href="" class="item_link" title="[title]">&nbsp;</a>
-                                <div class="item_copy_wrapper">
-                                    <button type="button" class="play_button">Stream now
-                                    </button>
-                                    <p class="typography">[title]</p>
-                                </div>
-                                <div class="item_image_wrapper">
-                                    <figure class="item_image" style="background-image: url(/assets/img/gallery_3.jpg);">&nbsp;</figure>
-                                </div>
+                            <a href="" class="item_link" title="[title]">&nbsp;</a>
+                            <div class="item_copy_wrapper">
+                                <button type="button" class="play_button">Stream now
+                                </button>
+                                <p class="typography">[title]</p>
+                            </div>
+                            <div class="item_image_wrapper">
+                                <figure class="item_image">&nbsp;</figure>
                             </div>
                         </div>
                         <div class="gallery_item">
-                            <div class="gallery_item_wrapper">
-                                <a href="" class="item_link" title="[title]">&nbsp;</a>
-                                <div class="item_copy_wrapper">
-                                    <button type="button" class="play_button">Stream now
-                                    </button>
-                                    <p class="typography">[title]</p>
-                                </div>
-                                <div class="item_image_wrapper">
-                                    <figure class="item_image" style="background-image: url(/assets/img/gallery_4.jpg);">&nbsp;</figure>
-                                </div>
+                            <a href="" class="item_link" title="[title]">&nbsp;</a>
+                            <div class="item_copy_wrapper">
+                                <button type="button" class="play_button">Stream now
+                                </button>
+                                <p class="typography">[title]</p>
+                            </div>
+                            <div class="item_image_wrapper">
+                                <figure class="item_image">&nbsp;</figure>
                             </div>
                         </div>
                         <div class="gallery_item">
-                            <div class="gallery_item_wrapper">
-                                <a href="" class="item_link" title="[title]">&nbsp;</a>
-                                <div class="item_copy_wrapper">
-                                    <button type="button" class="play_button">Stream now
-                                    </button>
-                                    <p class="typography">[title]</p>
-                                </div>
-                                <div class="item_image_wrapper">
-                                    <figure class="item_image" style="background-image: url(/assets/img/gallery_5.jpg);">&nbsp;</figure>
-                                </div>
+                            <a href="" class="item_link" title="[title]">&nbsp;</a>
+                            <div class="item_copy_wrapper">
+                                <button type="button" class="play_button">Stream now
+                                </button>
+                                <p class="typography">[title]</p>
+                            </div>
+                            <div class="item_image_wrapper">
+                                <figure class="item_image">&nbsp;</figure>
                             </div>
                         </div>
                     </div>
@@ -446,6 +436,39 @@
         </div>
         -->
     </main>
-    <footer id="global_footer" role="contentinfo"></footer>
+    <footer id="global_footer" role="contentinfo">
+        <div class="footer_content">
+            <h2>Apple Footer</h2>
+            <section class="section_item_1">
+                <ul>
+                    <li>
+                        <span class="footnote1">1. Qualified Purchasers receive an Apple Gift Card when they purchase an eligible Mac or iPad at a Qualifying Location. Only one Apple Gift Card per eligible Mac or iPad per Qualified Purchaser. Offer subject to availability. While supplies last. View full terms and conditions of offer </span>
+                    </li>
+                    <li>Apple Vision Pro has not been authorized as required by the rules of the Federal Communications Commission. This device is not, and may not be, offered for sale or lease, or sold or leased, until authorization is obtained.</li>
+                    <li>
+                        Apple Vision Pro will be available early next year on 
+                        <a href="/">apple.com</a>
+                        and at Apple retail stores in the U.S.
+                    </li>
+                    <li>To access and use all the features of Apple Card, you must add Apple Card to Wallet on an iPhone or iPad with the latest version of iOS or iPadOS. Update to the latest version by going to Settings > General > Software Update. Tap Download and Install.</li>
+                    <li>Available for qualifying applicants in the United States.</li>
+                    <li>Apple Card is issued by Goldman Sachs Bank USA, Salt Lake City Branch.</li>
+                    <li>
+                        Learn more about how Apple Card applications are evaluated at 
+                        <a href="https://support.apple.com/ko-kr/HT209218">support.apple.com/kb/HT209218</a>
+                    </li>
+                    <li>
+                        <span class="footnote2">A subscription is required for Apple TV+.</span>
+                    </li>
+                    <li>
+                        <span class="footnote3">Major League Baseball trademarks and copyrights are used with permission of MLB Advanced Media, L.P. All rights reserved.</span>
+                    </li>
+                </ul>
+            </section>
+            <nav class="section_item_2"></nav>
+            <section class="section_item_3"></section>
+        </div>
+        </div>
+    </footer>
 </body>
 </html>
