--- a/index.html
+++ b/index.html
@@ -305,11 +305,12 @@
             <div class="gallery">
                 <div class="gallery_wrapper">
                     <div class="gallery_container">
-                        <div class="gallery_item">
+                        <div id="gallery_1" class="gallery_item">
                             <div class="gallery_item_wrapper">
                                 <a href="" class="item_link" title="[title]">&nbsp;</a>
                                 <div class="item_copy_wrapper">
                                     <button type="button" class="play_button">Stream now
+                                        <span class="button_play">&nbsp;</span>
                                     </button>
                                     <p class="typography">[title]</p>
                                 </div>
@@ -318,7 +319,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="gallery_item">
+                        <div id="gallery_2" class="gallery_item">
                             <div class="gallery_item_wrapper">
                                 <a href="" class="item_link" title="[title]">&nbsp;</a>
                                 <div class="item_copy_wrapper">
@@ -331,7 +332,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="gallery_item">
+                        <div id="gallery_3" class="gallery_item">
                             <div class="gallery_item_wrapper">
                                 <a href="" class="item_link" title="[title]">&nbsp;</a>
                                 <div class="item_copy_wrapper">
@@ -344,7 +345,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="gallery_item">
+                        <div id="gallery_4" class="gallery_item">
                             <div class="gallery_item_wrapper">
                                 <a href="" class="item_link" title="[title]">&nbsp;</a>
                                 <div class="item_copy_wrapper">
@@ -357,7 +358,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="gallery_item">
+                        <div id="gallery_5" class="gallery_item">
                             <div class="gallery_item_wrapper">
                                 <a href="" class="item_link" title="[title]">&nbsp;</a>
                                 <div class="item_copy_wrapper">
